# Vtube-Plugin

./: LICENSE  README.md  pyproject.toml
Src/: main.py
Src/Camera/: webcam.py
Src/Gui/: main_window.py
Src/Output/: virtual_cam.py
Src/Render/: avatar.py
Src/Tracking/: discoverExpression.py  face.py
