[project]
name = "vtube-plugin"
version = "0.1.0"
description = "A little OBS-Studio Plugin to make a lightweight vtube"
authors = [
    {name = "KitsuneSemCalda",email = "arthuramagalhaes1312@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python (>=4.12.0.88,<5.0.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
